# queqiao-arr

./: .commitlintrc.js  .dockerignore  .gitignore  .lintstagedrc.js  DOCKER_README.md  Dockerfile  README.md  TODO.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package.json
.cursor/rules/: lax.mdc
.github/workflows/: docker.yml  release.yml
backend/: .env.example  README.md  pyproject.toml  requirements.txt  test_app.py  verify_structure.py
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/api/endpoints/: auth.py  config.py  dict.py  health.py  system_dict.py
backend/app/api/schemas/: __init__.py  config.py  system_dict.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  crud_config.py  crud_dict.py  crud_user.py  database.py  init_dict_data.py
backend/app/models/: __init__.py  config.py  dict.py  user.py
backend/app/services/: __init__.py
backend/app/services/clients/: __init__.py  base.py  factory.py  prowlarr.py  sonarr.py  tmdb.py
backend/app/tests/: conftest.py  test_main.py  test_security.py
backend/app/utils/: __init__.py  config_helpers.py  encryption.py  logger.py  response.py
backend/tests/: test_auth.py  test_clients.py  test_config.py
docs/: FE-06联调测试指南.md  Queqiao-arr 技术方案与开发计划书.md  需求文档.md
docs/reports/: BACKEND_COMPLETION_REPORT.md  F-01-frontend-init-report.md
docs/tasks/: B-01_用户认证模块API.md  B-02_配置模块API.md  B-03_配置加密存储与解密读取.md  B-04_TMDB_API客户端封装.md  B-09_元数据提供商配置API.md  B-10_外部服务客户端层.md  B-11_系统字典管理API.md  F-01_project-base-struct.md  F-01_项目结构初始化.md  F-02_Docker环境搭建.md  F-04_CI-CD流水线配置.md  FE-02_注册页面.md  FE-03_登录页面.md  FE-04_主设置页面UI.md  FE-05_主设置页面API联调.md  FE-06_元数据提供商设置页面UI.md  FE-07_系统字典管理页面.md
frontend/: env.d.ts  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: auth.ts  config.ts  dict.ts  index.ts  request.ts  system.ts  types.ts
scripts/: start-dev.bat  start-dev.ps1  start-dev.sh  start-prod.bat  start-prod.ps1  start-prod.sh  stop.bat  stop.ps1  stop.sh  verify-docker-config.bat  verify-docker-config.sh
(+36 files in other folders)
